fixed overflow title issue from JS

--- a/style.css
+++ b/style.css
@@ -54,7 +54,6 @@ body{
     font-size: 100%;
     overflow: hidden;
     white-space: nowrap; 
-    text-overflow : ellipsis;
 }
 
 .image-container{
